# LVGLv83_UI_Public_Component

./: README.md
Clock/Clock_Mode01/: clock_mode01.h  clock_mode01_conf.h
Public/: CMakeLists.txt  drive.h  driveconf.h
Public/src/: src_enum.h  src_type.h
Public/src/Clock/: clock_conf.h
Public/src/Clock/Clock_Mode01/: clock_mode01.c
Public/src/font/: CMakeLists.txt  clock_time_font_128.c  clock_time_font_24.c  clock_time_font_48.c  clock_time_font_64.c  clock_time_font_80.c
Public/src/logo/: CMakeLists.txt  logo.c  logo.h
Public/src/page/: page.c  page.h
Public/src/page_home/: page_home.c  page_home.h
